--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
   "homepage": "https://github.com/borisghidaglia/notion-rsc#readme",
   "dependencies": {
     "@notionhq/client": "^2.2.14",
+    "bright": "^0.8.4",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.3.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.13",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5.3.3"
   }
 }
