--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.13",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "eslint": "8.56.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5"
   }
 }
